syntax = "proto3";

option csharp_namespace = "HomeScreen.Service.Media";

package media;

service Media {
  rpc RandomMedia(MediaRequest) returns (stream MediaEntry);

  rpc ToggleMedia(ToggleMediaRequest) returns (MediaEntry);

  rpc TransformMedia(TransformMediaRequest) returns (TransformMediaResponse);

  rpc PaginateMedia(PaginateMediaRequest) returns (stream PaginateMediaResponse);
}

message MediaRequest {
  uint32 count = 1;
}

message ToggleMediaRequest {
  string id = 1;
  bool enabled = 2;
}

message MediaResponse {
  repeated MediaEntry items = 2;
}

message MediaEntry {
  string id = 1;
  int64 utc_datetime = 2;
  string location = 3;
  double longitude = 4;
  double latitude = 5;
  string notes = 6;
  bool enabled = 7;
  double aspect_ratio = 8;
  bool portrait = 9;
  uint32 base_r = 10;
  uint32 base_g = 11;
  uint32 base_b = 12;
}

message TransformMediaRequest {
  string id = 1;
  uint32 width = 2;
  uint32 height = 3;
  bool blur = 4;
  TransformMediaFormat media_format = 5;
}

message TransformMediaResponse {
  TransformMediaState state = 1;
}

message PaginateMediaRequest {
  int32 offset = 1;
  int32 length = 2;
}

message PaginateMediaResponse {
  uint64 total = 1;
  MediaEntry entry = 2;
}

enum TransformMediaState {
  NotFound = 0;
  Transformed = 1;
}

enum TransformMediaFormat {
  Jpeg = 0;
  JpegXL = 1;
  Png = 2;
  WebP = 3;
  Avif = 4;
}